--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -4,7 +4,9 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="8" 
+        android:targetSdkVersion="15"
+        />
 
     <uses-permission android:name="android.permission.INTERNET" >
     </uses-permission>
@@ -14,6 +16,8 @@
     </uses-permission>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" >
     </uses-permission>
+
+    <supports-screens android:resizeable="true" />
 
     <application
         android:icon="@drawable/ic_launcher"
